nesc-frontend/src/test/resources/integration/programs/bad/bad16/M.nc
module M
{
   provides command void c();
}
implementation
{
   static int n;

   static void f()
   {
      ++n;
   }

   command void c()
   {
      n = 0;
      post f();
   }
}
